@@ -43,6 +43,7 @@
   *) Start cleaning up OPENSSL_NO_xxx #define's
 	OPENSSL_NO_RIPEMD160, OPENSSL_NO_RIPEMD merged into OPENSSL_NO_RMD160
 	OPENSSL_NO_FP_API merged into OPENSSL_NO_STDIO
+	Use setbuf() and remove OPENSSL_NO_SETVBUF_IONBF
      [Rich Salz]
 
   *) Experimental support for a new, fast, unbiased prime candidate generator,
